Driver library URLs fix
Former-commit-id: 7f88ec25453e2a78a1b3c5b0074e99aa8d46628e